Update JRebel integration instructions